Implement PatchSponsor handler
